--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 <body>
   <h1>My Interactive Graphs</h1>
   <div class="graph-container">
-    <iframe src="interactive_graph1.html"></iframe>
+    <iframe src="Interactive Graphs/interactive_graph1.html"></iframe>
   </div>
   <div class="graph-container">
-    <iframe src="interactive_graph2.html"></iframe>
+    <iframe src="Interactive Graphs/interactive_graph2.html"></iframe>
   </div>
 </body>
 </html>
