--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     
   <h3>Interactive ggiraph Graph with Customized Tooltip</h3>
   <div class="graph-container">
-    <iframe src="interactive_graph1.html" scrolling="no"></iframe>
+    <iframe src="Interactive Graphs/interactive_graph1.html" scrolling="no"></iframe>
   </div>
   <h4>Dataset Used</h4>
   <ul>
@@ -63,7 +63,7 @@
   </ul>
   <h3>Linked Interactive Graphs</h3>
   <div class="graph-container">
-    <iframe src="interactive_graph2.html" scrolling="no"></iframe>
+    <iframe src="Interactive Graphs/interactive_graph2.html" scrolling="no"></iframe>
   </div>
   <h4>Dataset Used</h4>
   <ul>
