--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
+      margin: 0 auto;
+      padding: 0 10%;
       background-color: #f5f5f5;
     }
     h1, h3 {
@@ -27,12 +27,18 @@
     }
     iframe {
       width: 100%;
-      height: 650px;
+      height: 50vw; /* Base height for small to medium screens */
       border: none;
     }
     ul {
       padding-left: 20px;
       margin-top: 0;
+    }
+    /* Media queries for responsive iframe height */
+    @media (min-width: 900px) {
+      iframe {
+        height: 55vw;
+      }
     }
   </style>
 </head>
@@ -47,10 +53,10 @@
       <li><b>dplyr</b>: A data manipulation package that provides a consistent set of verbs to help solve the most common data manipulation challenges.</li>
       <li><b>htmlwidgets</b>: A package that provides a framework for creating HTML widgets that can be used in R.</li>
     </ul>
-    
+  <br>
   <h3>Interactive ggiraph Graph with Customized Tooltip</h3>
   <div class="graph-container">
-    <iframe src="Interactive Graphs/interactive_graph1.html" scrolling="no"></iframe>
+    <iframe src="interactive_graph1.html" scrolling="no"></iframe>
   </div>
   <h4>Dataset Used</h4>
   <ul>
@@ -61,9 +67,10 @@
     <li><b>mpg dataset</b>: Used to create a scatter plot where displ (engine displacement) is plotted against hwy (highway miles per gallon). The points are colored by the class of the car.</li>
     <li><b>Customized tooltip</b>: Enhanced dataset by adding a new tooltip column that concatenates the manufacturer, model, and class of each car. The new tooltip column is used to provide more detailed information in the tooltip.</li>
   </ul>
+  <br>
   <h3>Linked Interactive Graphs</h3>
   <div class="graph-container">
-    <iframe src="Interactive Graphs/interactive_graph2.html" scrolling="no"></iframe>
+    <iframe src="interactive_graph2.html" scrolling="no"></iframe>
   </div>
   <h4>Dataset Used</h4>
   <ul>
